--- a/product-api/Dockerfile
+++ b/product-api/Dockerfile
@@ -1,4 +1,6 @@
-FROM ubuntu:latest
-LABEL authors="arale"
-
-ENTRYPOINT ["top", "-b"]
+FROM gradle:7.6.1-jdk17 AS build
+COPY --chown=gradle:gradle . .
+WORKDIR .
+RUN gradle build -x test --no-daemon
+EXPOSE 8081
+CMD ["gradle", "bootRun"]
