--- a/product-api/src/main/resources/application.yaml
+++ b/product-api/src/main/resources/application.yaml
@@ -2,10 +2,13 @@ server:
   port: ${PORT:8081}
 
 spring:
-  application:
-    name: product-api
+
   main:
     allow-circular-references: true
+    allow-bean-definition-overriding: true
+
+  application:
+    name: product-api
 
   datasource:
     driver-class-name: org.postgresql.Driver
@@ -29,3 +32,29 @@ spring:
       mode: always
       continue-on-error: true
       platform: postgresql
+
+  rabbitmq:
+    host: ${RABBIT_MQ_HOST:localhost}
+    port: ${RABBIT_MQ_PORT:5672}
+    username: ${RABBIT_MQ_USER:guest}
+    password: ${RABBIT_MQ_PASSWORD:guest}
+
+app-config:
+
+  services:
+    sales: http://${SALES_HOST:localhost}:${SALES_PORT:8082}
+
+  secrets:
+    api-secret: ${API_SECRET:YXV0aC1hcGktc2VjcmV0S2V5LURFVi1yMDB0}
+
+  rabbit:
+    exchange:
+      product: product.topic
+
+    routingKey:
+      product-stock: product-stock-update.routingKey
+      sales-confirmation: sales-confirmation.routingKey
+
+    queue:
+      product-stock: product-stock-update.queue
+      sales-confirmation: sales-confirmation.queue
