--- a/product-api/src/main/resources/application.yaml
+++ b/product-api/src/main/resources/application.yaml
@@ -12,9 +12,9 @@ spring:
 
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5433/product-db
-    username: admin
-    password: root
+    url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5433}/${DB_NAME:product-db}
+    username: ${DB_USER:admin}
+    password: ${DB_PASS:root}
     initialize: true
     maxActive: 3
 
